--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>2.1.1.RELEASE</version>
         </dependency>
 
+        <!--<dependency>-->
+        <!--<groupId>org.springframework.data</groupId>-->
+        <!--<artifactId>spring-data-mongodb</artifactId>-->
+        <!--<version>2.1.1.RELEASE</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
