--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>2.2.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!--TEST-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
