--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,8 @@ spring:
       settings:
         trace: false
         web-allow-others: false
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: asi
